# SemProj

./: Automat.cpp  Automat.h  CMakeLists.txt  CoinBuffer.cpp  CoinBuffer.h  Item.cpp  Item.h  LinkedList.cpp  LinkedList.h  LinkedListNode.cpp  LinkedListNode.h  README.txt  main.cpp  testyUloha_0.cpp
